--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Ustam</string>
+    <string name="title_activity_main2">MainActivity2</string>
+    <string name="title_home">Anasayfa</string>
+    <string name="title_profile">Profil</string>
+    <string name="title_notifications">Bildirimler</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
