--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,10 @@
     <string name="title_activity_main2">MainActivity2</string>
     <string name="title_home">Anasayfa</string>
     <string name="title_profile">Profil</string>
-    <string name="title_notifications">Bildirimler</string>
+    <string name="title_notifications">İş Ara</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_tabbed">TabbedActivity</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
 </resources>
